<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bold"/>
            <Button
                android:id="@+id/italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/italic"/>
            <Button
                android:id="@+id/underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/underline"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/smileys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smileys"/>
            <ImageButton
                android:id="@+id/smile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/smiley1"
                android:src="@drawable/smile"
                android:paddingLeft="25dp"
                style="@style/translucide"/>
            <ImageButton
                android:id="@+id/happy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/smiley2"
                android:src="@drawable/happy"
                android:paddingLeft="25dp"
                style="@style/translucide"/>
            <ImageButton
                android:id="@+id/clin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/smiley3"
                android:src="@drawable/clin"
                android:paddingLeft="25dp"
                style="@style/translucide"/>
<!--            add les 3 smileys-->
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/black"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/black" />

            <RadioButton
                android:id="@+id/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blue" />

            <RadioButton
                android:id="@+id/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red" />
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/visibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edition"/>
        <EditText
            android:id="@+id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/preview"/>
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
